{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 599,
  "lineage": "3617cfac-0346-9d70-ae40-7194c622c0fa",
  "resources": [
    {
      "module": "module.jenkins_deployment",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0917237b4e71c5759",
            "arn": "arn:aws:ec2:eu-west-2:494568794072:instance/i-05333defdcd33bd13",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05333defdcd33bd13",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "group2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f09418d46eb03d0e",
            "private_dns": "ip-10-10-1-56.eu-west-2.compute.internal",
            "private_ip": "10.10.1.56",
            "public_dns": "ec2-18-130-203-105.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.203.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04bd6ae496c640089",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c93d6209acaf91de",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f8ffb9df47b60fb9"
            ]
          },
          "dependencies": [
            "module.sg_deployment.aws_security_group.jenkins-sg",
            "module.vpc_deployment.aws_subnet.group2-sub-live",
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_deployment",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0917237b4e71c5759",
            "arn": "arn:aws:ec2:eu-west-2:494568794072:instance/i-0f8e6fdd2306c9629",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8e6fdd2306c9629",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "group2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09bd699ea3d5a3562",
            "private_dns": "ip-10-10-2-24.eu-west-2.compute.internal",
            "private_ip": "10.10.2.24",
            "public_dns": "ec2-3-10-51-57.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.51.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-044295393b68821f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00219577a84a4e5e0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044c9ed336553f498"
            ]
          },
          "dependencies": [
            "module.sg_deployment.aws_security_group.group2-sg",
            "module.vpc_deployment.aws_subnet.group2-sub-test",
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "group2-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-047dc303b8e937e96",
            "owner_id": "494568794072",
            "vpc_id": "vpc-0ccc7caddcabaa107"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "group2-rt-main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e57a8a6ffae490b9",
            "original_route_table_id": "rtb-0e57337c0484373e5",
            "route_table_id": "rtb-0e5dd1aff1fa6704c",
            "vpc_id": "vpc-0ccc7caddcabaa107"
          },
          "dependencies": [
            "module.vpc_deployment.aws_internet_gateway.group2-igw",
            "module.vpc_deployment.aws_route_table.group2-rt",
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "group2-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e5dd1aff1fa6704c",
            "owner_id": "494568794072",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047dc303b8e937e96",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0ccc7caddcabaa107"
          },
          "dependencies": [
            "module.vpc_deployment.aws_internet_gateway.group2-igw",
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group2-live-rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf8324de34936dad",
            "route_table_id": "rtb-0e5dd1aff1fa6704c",
            "subnet_id": "subnet-0c93d6209acaf91de"
          },
          "dependencies": [
            "module.vpc_deployment.aws_internet_gateway.group2-igw",
            "module.vpc_deployment.aws_route_table.group2-rt",
            "module.vpc_deployment.aws_subnet.group2-sub-live",
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group2-test-rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c851ed21cc9f1274",
            "route_table_id": "rtb-0e5dd1aff1fa6704c",
            "subnet_id": "subnet-00219577a84a4e5e0"
          },
          "dependencies": [
            "module.vpc_deployment.aws_internet_gateway.group2-igw",
            "module.vpc_deployment.aws_route_table.group2-rt",
            "module.vpc_deployment.aws_subnet.group2-sub-test",
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group2-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:494568794072:security-group/sg-044c9ed336553f498",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044c9ed336553f498",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9966,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9966
              }
            ],
            "name": "group2-sg",
            "name_prefix": null,
            "owner_id": "494568794072",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ccc7caddcabaa107"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_deployment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:494568794072:security-group/sg-0f8ffb9df47b60fb9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8ffb9df47b60fb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9966,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9966
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": null,
            "owner_id": "494568794072",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ccc7caddcabaa107"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group2-sub-live",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:494568794072:subnet/subnet-0c93d6209acaf91de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0c93d6209acaf91de",
            "map_public_ip_on_launch": true,
            "owner_id": "494568794072",
            "vpc_id": "vpc-0ccc7caddcabaa107"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group2-sub-live2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:494568794072:subnet/subnet-0daaa90dd8673c971",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-0daaa90dd8673c971",
            "map_public_ip_on_launch": true,
            "owner_id": "494568794072",
            "vpc_id": "vpc-0ccc7caddcabaa107"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group2-sub-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:494568794072:subnet/subnet-00219577a84a4e5e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-00219577a84a4e5e0",
            "map_public_ip_on_launch": true,
            "owner_id": "494568794072",
            "vpc_id": "vpc-0ccc7caddcabaa107"
          },
          "dependencies": [
            "module.vpc_deployment.aws_vpc.group2-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployment",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "group2-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:494568794072:vpc/vpc-0ccc7caddcabaa107",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02f5c49a81aab330b",
            "default_route_table_id": "rtb-0e57337c0484373e5",
            "default_security_group_id": "sg-02876ed1dbe947cdc",
            "dhcp_options_id": "dopt-4f164827",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ccc7caddcabaa107",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e57337c0484373e5",
            "owner_id": "494568794072"
          }
        }
      ]
    }
  ]
}